refactor: decouple Resume from Job, move scoring to apply time
- Remove job field from Resume; Score now keyed by (resumeId, jobId)
- uploadResume/updateResume switched to MultipartFile + resumeName
- Score generated lazily in ApplicationService.applyForJob
- All service/controller signatures updated to accept explicit jobId
- Report and suggestion endpoints now include /job/{jobId} in path
- All affected tests updated